# enduro2d

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt
android/: .gitignore
android/.google/: packaging.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/enduro2d/engine/: E2DActivity.java  E2DNativeLib.java
headers/enduro2d/base/: configs.hpp  macros.hpp
headers/enduro2d/core/: _all.hpp  batcher.hpp  debug.hpp  platform.hpp  render.hpp  render.inl  vfs.hpp
headers/enduro2d/high/: _all.hpp  _high.hpp  factory.inl  model.hpp  node.hpp  world.hpp
headers/enduro2d/high/assets/: cbuffer_template_asset.hpp  material_asset.hpp  model_asset.hpp
headers/enduro2d/high/components/: camera.hpp  model_renderer.hpp  renderer.hpp
headers/enduro2d/high/systems/: actor_system.hpp  flipbook_system.hpp  model_render_system.hpp  spine_player_system.hpp  spine_render_system.hpp  sprite_render_system.hpp
headers/enduro2d/math/: _math.hpp
headers/enduro2d/utils/: _all.hpp  cbuffer_template.hpp  filesystem.hpp  java.hpp  shader_source.hpp
samples/: CMakeLists.txt
samples/sources/sample_00/: sample_00.cpp
samples/sources/sample_03/: sample_03.cpp
samples/sources/sample_04/: sample_04.cpp
samples/sources/sample_05/: sample_05.cpp
samples/sources/sample_06/: sample_06.cpp
samples/sources/sample_07/: sample_07.cpp
samples/sources/sample_08/: sample_08.cpp
sources/android/: .gitignore
sources/android/app/: build.gradle
sources/android/app/src/main/: AndroidManifest.xml
sources/android/app/src/main/java/enduro2d/engine/: E2DActivity.java  E2DApplication.java  E2DNativeLib.java
sources/android/app/src/main/java/enduro2d/engine/test/: E2DTestActivity.java  E2DTestApplication.java
sources/android/engine/enduro2d/engine/: E2DActivity.java
sources/android/keystore/: testbuild.jks
sources/enduro2d/core/: batcher.cpp  dbgui.cpp  debug.cpp  engine.cpp  platform.cpp  render.cpp
sources/enduro2d/core/audio_impl/: audio.hpp
sources/enduro2d/core/debug_impl/: debug.hpp  debug_console_sink_android.cpp  debug_console_sink_default.cpp  debug_console_sink_msvc.cpp  debug_native_log_android.cpp  debug_native_log_msvc.cpp  debug_native_log_none.cpp
sources/enduro2d/core/platform_impl/: platform.hpp  platform_android.cpp  platform_android.hpp  platform_linux.cpp  platform_macosx.cpp  platform_macosx.mm  platform_none.cpp  platform_windows.cpp
sources/enduro2d/core/render_impl/: render.hpp  render_none.cpp  render_opengl.cpp  render_opengl_base.cpp  render_opengl_base.hpp  render_opengl_impl.cpp  render_opengl_impl.hpp
sources/enduro2d/core/vfs_impl/: asset_file_source_android.cpp  asset_file_source_none.cpp  vfs.hpp  vfs_android.cpp
sources/enduro2d/core/window_impl/: window.hpp  window_android.cpp  window_glfw.cpp
sources/enduro2d/high/: model.cpp  node.cpp  starter.cpp
sources/enduro2d/high/assets/: cbuffer_template_asset.cpp  material_asset.cpp  model_asset.cpp  shader_asset.cpp
sources/enduro2d/high/components/: model_renderer.cpp  renderer.cpp
sources/enduro2d/high/systems/: actor_system.cpp  flipbook_system.cpp  model_render_system.cpp  render_system.cpp  spine_player_system.cpp  spine_render_system.cpp  sprite_render_system.cpp
sources/enduro2d/high/systems/render_system_impl/: render_system_base.hpp  render_system_batcher.hpp  render_system_drawer.cpp  render_system_drawer.hpp
sources/enduro2d/utils/: cbuffer_template.cpp  filesystem.cpp  java.cpp  java.hpp  shader_source.cpp
sources/enduro2d/utils/filesystem_impl/: files.hpp  filesystem.hpp  filesystem_linux.cpp  filesystem_macosx.mm  filesystem_windows.cpp
untests/: CMakeLists.txt
untests/sources/: common.cpp  common.hpp
untests/sources/untests_base/: _base.cpp
untests/sources/untests_core/: _core.cpp  debug.cpp  render.cpp  vfs.cpp
untests/sources/untests_high/: _high.cpp  library.cpp
untests/sources/untests_math/: _math.cpp
untests/sources/untests_utils/: _utils.cpp  filesystem.cpp  image.cpp  mesh.cpp  shape.cpp
